# kobo-clara2e-python-build

./: .gitignore  Dockerfile  README.md  compile-envs  cross-arm-kobo.txt  process-sysroot.py  readline.pc
fbink/: meson.build  meson.options
fbink/subprojects/: i2c-tools.wrap
fbink/subprojects/packagefiles/i2c-tools/: meson.build
fbink/subprojects/packagefiles/i2c-tools/include/: meson.build
fbink/subprojects/packagefiles/i2c-tools/lib/: meson.build
tabuladeps/: meson.build  meson.options
tabuladeps/subprojects/: pango.wrap
